...
          tabBarIcon: ({ focused }) => <TabIcon name="sun" focused={focused} />,
        }}
      />
      <Tabs.Screen
        name="circle"
        options={{
          title: 'Circle',
          tabBarIcon: ({ focused }) => <TabIcon name="circle" focused={focused} />,
        }}
      />
      <Tabs.Screen
        name="ask"
        options={{
...
